Style home page

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,27 @@ a.active {
   text-decoration: underline;
   text-underline-offset: 7px; 
 }
+
+.home-section {
+  position: relative;
+  height: 85vh;
+  background-image: url(./bg.jpg); 
+  background-size: cover;
+  background-position: center;
+}
+
+.home-section::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.4); 
+  z-index: 1;
+}
+
+.home-container {
+  position: relative;
+  z-index: 2; 
+}
